Styled web work section

--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
                 alt="A LEGO woman in pieces"
               />
               <div class="card-body">
-                <h5 class="card-title">Seven Music Video Injuries</h5>
+                <h5 class="card-title">Music Video Injuries</h5>
                 <p class="card-text">
-                  Before MTV debuted in 1981, music videos consisted of
-                  performance clips by British bands who couldn’t afford to tour
-                  America.
+                  Making music videos in the 80's wasn’t all glamour. Behind the
+                  scenes, the long days were filled with vomit, blood, and
+                  diarrhea.
                 </p>
               </div>
             </div>
