--- a/work.html
+++ b/work.html
@@ -67,11 +67,11 @@
                 alt="A LEGO woman in pieces"
               />
               <div class="card-body">
-                <h5 class="card-title">Seven Music Video Injuries</h5>
+                <h5 class="card-title">Music Video Injuries</h5>
                 <p class="card-text">
-                  Before MTV debuted in 1981, music videos consisted of
-                  performance clips by British bands who couldn’t afford to tour
-                  America.
+                  Making music videos in the 80's wasn’t all glamour. Behind the
+                  scenes, the long days were filled with vomit, blood, and
+                  diarrhea.
                 </p>
               </div>
             </div>
@@ -189,18 +189,19 @@
 
       <div class="container">
         <div class="row">
-          <div class="col d-none d-lg-block mb-5">
+          <div class="col d-none d-lg-block mb-5 mt-4">
             <img
               src="/photos/weather.png"
               alt="New Wave Weather App"
               class="img-fluid"
             />
           </div>
-          <div class="col">
+          <div class="col mt-5">
+            <h4 class="card-title">New Wave Weather App</h4>
+
+            <h5 class="work-subhead">Built with HTML, CSS and Javascript.</h5>
             <br />
-            <h3>New Wave Weather App</h3>
             <p class="work-web-paragraph">
-              Built with HTML, CSS and Javascript.<br />
               Don't be an airhead! Head back to a time of New Coke and catch up
               on the weather with all your favourite 80's new wave artists.
             </p>
@@ -227,17 +228,13 @@
           <div class="collapse" id="collapseWeb">
             <div class="row">
               <div class="col d-none d-lg-block mb-4">
-                <img
-                  src="/photos/whale.png"
-                  alt="Atlantic Canada landing page"
-                  class="img-fluid"
-                />
-              </div>
-              <div class="col">
                 <br />
-                <h3>Atlantic Canada Landing Page</h3>
+                <h4 class="card-title">Atlantic Canada Landing Page</h4>
+                <h5 class="work-subhead">
+                  Built with HTML, CSS and Javascript.
+                </h5>
+                <br />
                 <p class="work-web-paragraph">
-                  Built with HTML, CSS and Javascript.<br />
                   Discover why the four Atlantic provinces in Canada are your
                   next dream destination.
                 </p>
@@ -261,6 +258,13 @@
                     Less
                   </button>
                 </p>
+              </div>
+              <div class="col d-none d-lg-block mb-4">
+                <img
+                  src="/photos/whale.png"
+                  alt="Atlantic Canada landing page"
+                  class="img-fluid"
+                />
               </div>
             </div>
           </div>
