--- a/work.html
+++ b/work.html
@@ -34,6 +34,31 @@
     />
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+      <div class="container-fluid">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav mt-3">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link" href="#journo">Journalism</a>
+            <a class="nav-link" href="/">MS</a>
+            <a class="nav-link" href="#develop">Web Projects</a>
+            <a class="nav-link" href="#contact">Contact Me</a>
+          </div>
+        </div>
+      </div>
+    </nav>
     <h1>Mandy's work</h1>
     <br />
     <div class="journalism-work">
