--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">MS</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -48,7 +47,10 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div
+          class="collapse navbar-collapse d-flex justify-content-evenly mt-3"
+          id="navbarNav"
+        >
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/">Home</a>
@@ -59,13 +61,10 @@
             <li class="nav-item">
               <a class="nav-link" href="#journo">Journalism</a>
             </li>
-            <img
-              src="photos/logo.png"
-              alt="Mandy Savoie logo"
-              width="30"
-              height="24"
-              class="d-inline-block align-text-top"
-            />
+            <li class="nav-item">
+              <a class="nav-link ms-3 me-3" id="brand" href="/">MS</a>
+            </li>
+
             <li class="nav-item">
               <a class="nav-link" href="#develop">Web Projects</a>
             </li>
