--- a/index.html
+++ b/index.html
@@ -40,42 +40,26 @@
           class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div
-          class="collapse navbar-collapse d-flex justify-content-evenly mt-3"
-          id="navbarNav"
-        >
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#journo">Journalism</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link ms-3 me-3" id="brand" href="/">MS</a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="#develop">Web Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact Me</a>
-            </li>
-          </ul>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav mt-3">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link" href="/#about">About</a>
+            <a class="nav-link" href="/#journo">Writing</a>
+            <a class="nav-link" id="brand" href="/">MS</a>
+            <a class="nav-link" href="/#develop">Web</a>
+            <a class="nav-link" href="/work.html">Work</a>
+            <a class="nav-link" href="/#contact">Contact</a>
+          </div>
         </div>
       </div>
     </nav>
-
     <div class="hero">
       <h1>Mandy Savoie</h1>
       <h2>Freelance writer + editor + fact-checker + front-end developer</h2>
@@ -132,7 +116,7 @@
 
     <div class="writing-work">
       <h2 class="heading" id="journo">
-        <a href="/work.html#journalism-work">Journalism Work</a>
+        <a href="/work.html#journalism-work">Writing</a>
       </h2>
 
       <div class="container card">
