--- a/work.html
+++ b/work.html
@@ -50,11 +50,12 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav mt-3">
             <a class="nav-link active" aria-current="page" href="/">Home</a>
-            <a class="nav-link" href="#about">About</a>
-            <a class="nav-link" href="#journo">Journalism</a>
-            <a class="nav-link" href="/">MS</a>
-            <a class="nav-link" href="#develop">Web Projects</a>
-            <a class="nav-link" href="#contact">Contact Me</a>
+            <a class="nav-link" href="/#about">About</a>
+            <a class="nav-link" href="/#journo">Writing</a>
+            <a class="nav-link" id="brand" href="/">MS</a>
+            <a class="nav-link" href="/#develop">Web</a>
+            <a class="nav-link" href="/work.html">Work</a>
+            <a class="nav-link" href="/#contact">Contact</a>
           </div>
         </div>
       </div>
@@ -63,7 +64,7 @@
     <br />
     <div class="journalism-work">
       <br />
-      <h2 class="heading">Journalism</h2>
+      <h2 class="heading">Writing</h2>
 
       <div class="container card">
         <div class="row">
