Added javascript to navbar

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="navbar">
       <div class="container-fluid">
         <button
           class="navbar-toggler"
@@ -301,5 +301,6 @@
     </div>
 
     <footer>Copyright 2022 Mandy Savoie</footer>
+    <script src="/style/javaindex.js" ;></script>
   </body>
 </html>
