Added javascript to work navbar

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav mt-3">
+          <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="/">Home</a>
             <a class="nav-link" href="/#about">About</a>
             <a class="nav-link" href="/#journo">Writing</a>
-            <a class="nav-link" id="brand" href="/">MS</a>
+            <a class="nav-link active" id="brand" href="/">MS</a>
             <a class="nav-link" href="/#develop">Web</a>
             <a class="nav-link" href="/work.html">Work</a>
             <a class="nav-link" href="/#contact">Contact</a>
@@ -116,7 +116,7 @@
 
     <div class="writing-work">
       <h2 class="heading" id="journo">
-        <a href="/work.html#journalism-work">Writing</a>
+        <a href="/work.html#journalism-work" class="heading">Writing</a>
       </h2>
 
       <div class="container card">
@@ -178,7 +178,9 @@
 
     <div class="web-work">
       <h2 class="heading" id="develop">
-        <a href="/work.html#web-work-page">Front-end development</a>
+        <a href="/work.html#web-work-page" class="heading"
+          >Front-end development</a
+        >
       </h2>
 
       <div
