--- a/work.html
+++ b/work.html
@@ -48,13 +48,13 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav mt-3">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
+          <div class="navbar-nav">
+            <a class="nav-link" aria-current="page" href="/">Home</a>
             <a class="nav-link" href="/#about">About</a>
             <a class="nav-link" href="/#journo">Writing</a>
             <a class="nav-link" id="brand" href="/">MS</a>
             <a class="nav-link" href="/#develop">Web</a>
-            <a class="nav-link" href="/work.html">Work</a>
+            <a class="nav-link active" href="/work.html">Work</a>
             <a class="nav-link" href="/#contact">Contact</a>
           </div>
         </div>
