Added contact section to work page

--- a/work.html
+++ b/work.html
@@ -55,7 +55,7 @@
             <a class="nav-link" id="brand" href="/">MS</a>
             <a class="nav-link" href="/#develop">Web</a>
             <a class="nav-link active" href="/work.html">Work</a>
-            <a class="nav-link" href="/#contact">Contact</a>
+            <a class="nav-link" href="#contactWork">Contact</a>
           </div>
         </div>
       </div>
@@ -293,6 +293,51 @@
                 />
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="contact" id="contactWork">
+      <h2>Contact Me</h2>
+      <p>
+        Get in touch:
+        <br />
+        <a class="email" href="mailto:mandysavoie@gmail.com"
+          >mandysavoie@gmail.com</a
+        >
+      </p>
+
+      <div class="container mt-5">
+        <div class="row">
+          <div class="col-3 contact-icon">
+            <a
+              class="icon"
+              target="_blank"
+              href="https://www.instagram.com/mansavytravels/"
+            >
+              <i class="fa-brands fa-instagram-square fa-2x"></i>
+            </a>
+          </div>
+          <div class="col-3 contact-icon">
+            <a
+              class="icon"
+              target="_blank"
+              href="https://twitter.com/mandysavoie"
+              ><i class="fa-brands fa-twitter-square fa-2x"></i
+            ></a>
+          </div>
+          <div class="col-3 contact-icon">
+            <a
+              class="icon"
+              target="_blank"
+              href="https://www.linkedin.com/in/mansavy/"
+              ><i class="fa-brands fa-linkedin fa-2x"></i
+            ></a>
+          </div>
+          <div class="col-3 contact-icon">
+            <a class="icon" target="_blank" href="https://github.com/mansavy"
+              ><i class="fa-brands fa-github-square fa-2x"></i
+            ></a>
           </div>
         </div>
       </div>
