Made site more SEO friendly

--- a/index.html
+++ b/index.html
@@ -49,13 +49,21 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
-            <a class="nav-link" href="/#about">About</a>
-            <a class="nav-link" href="/#journo">Writing</a>
-            <a class="nav-link active" id="brand" href="/">MS</a>
-            <a class="nav-link" href="/#develop">Web</a>
-            <a class="nav-link" href="/work.html">Work</a>
-            <a class="nav-link" href="/#contact">Contact</a>
+            <a
+              class="nav-link active"
+              aria-current="page"
+              title="Homepage"
+              href="/"
+              >Home</a
+            >
+            <a class="nav-link" title="About page" href="/#about">About</a>
+            <a class="nav-link" title="Writing" href="/#journo">Writing</a>
+            <a class="nav-link active" title="Homepage" id="brand" href="/"
+              >MS</a
+            >
+            <a class="nav-link" title="Web projects" href="/#develop">Web</a>
+            <a class="nav-link" title="Work page" href="/work.html">Work</a>
+            <a class="nav-link" title="Contact" href="/#contact">Contact</a>
           </div>
         </div>
       </div>
@@ -88,7 +96,7 @@
               <p>
                 Bylines include <i>WestJet Magazine</i>,
                 <i>Canadian Geographic Magazine</i>, mental_floss.com and more.
-                I've fact-checking magazines like <i>OnBoard</i>,
+                I've fact-checked magazines like <i>OnBoard</i>,
                 <i>This Magazine</i>, <i>Dementia Connections</i>,
                 <i>Leap Magazine</i> and others.
               </p>
@@ -115,7 +123,7 @@
     </div>
 
     <div class="writing-work">
-      <h2 class="heading" id="journo">
+      <h2 class="heading" title="Writing" id="journo">
         <a href="/work.html#journalism-work" class="heading">Writing</a>
       </h2>
 
@@ -177,7 +185,7 @@
     </div>
 
     <div class="web-work">
-      <h2 class="heading" id="develop">
+      <h2 class="heading" title="Front-end development" id="develop">
         <a href="/work.html#web-work-page" class="heading"
           >Front-end development</a
         >
@@ -272,6 +280,7 @@
             <a
               class="icon"
               target="_blank"
+              title="Instagram"
               href="https://www.instagram.com/mansavytravels/"
             >
               <i class="fa-brands fa-instagram-square fa-2x"></i>
@@ -281,6 +290,7 @@
             <a
               class="icon"
               target="_blank"
+              title="Twitter"
               href="https://twitter.com/mandysavoie"
               ><i class="fa-brands fa-twitter-square fa-2x"></i
             ></a>
@@ -289,12 +299,17 @@
             <a
               class="icon"
               target="_blank"
+              title="LinkedIn"
               href="https://www.linkedin.com/in/mansavy/"
               ><i class="fa-brands fa-linkedin fa-2x"></i
             ></a>
           </div>
           <div class="col-3 contact-icon">
-            <a class="icon" target="_blank" href="https://github.com/mansavy"
+            <a
+              class="icon"
+              title="GitHub"
+              target="_blank"
+              href="https://github.com/mansavy"
               ><i class="fa-brands fa-github-square fa-2x"></i
             ></a>
           </div>
