--- a/work.html
+++ b/work.html
@@ -7,7 +7,7 @@
     <title>Mandy Savoie's Work | Journalist/web developer</title>
     <meta
       name="description"
-      content="Check out examples of Mandy Savoie's writing and web development."
+      content="Check out examples of Mandy Savoie's writing and web development work."
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -49,13 +49,17 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" aria-current="page" href="/">Home</a>
-            <a class="nav-link" href="/#about">About</a>
-            <a class="nav-link" href="/#journo">Writing</a>
-            <a class="nav-link" id="brand" href="/">MS</a>
-            <a class="nav-link" href="/#develop">Web</a>
-            <a class="nav-link active" href="/work.html">Work</a>
-            <a class="nav-link" href="#contactWork">Contact</a>
+            <a class="nav-link" aria-current="page" title="Homepage" href="/"
+              >Home</a
+            >
+            <a class="nav-link" title="About" href="/#about">About</a>
+            <a class="nav-link" title="Writing" href="/#journo">Writing</a>
+            <a class="nav-link" title="Homepage" id="brand" href="/">MS</a>
+            <a class="nav-link" title="Web work" href="/#develop">Web</a>
+            <a class="nav-link active" title="Work page" href="/work.html"
+              >Work</a
+            >
+            <a class="nav-link" title="Contact" href="#contactWork">Contact</a>
           </div>
         </div>
       </div>
@@ -313,6 +317,7 @@
             <a
               class="icon"
               target="_blank"
+              title="Instagram"
               href="https://www.instagram.com/mansavytravels/"
             >
               <i class="fa-brands fa-instagram-square fa-2x"></i>
@@ -322,6 +327,7 @@
             <a
               class="icon"
               target="_blank"
+              title="Twitter"
               href="https://twitter.com/mandysavoie"
               ><i class="fa-brands fa-twitter-square fa-2x"></i
             ></a>
@@ -330,12 +336,17 @@
             <a
               class="icon"
               target="_blank"
+              title="LinkedIn"
               href="https://www.linkedin.com/in/mansavy/"
               ><i class="fa-brands fa-linkedin fa-2x"></i
             ></a>
           </div>
           <div class="col-3 contact-icon">
-            <a class="icon" target="_blank" href="https://github.com/mansavy"
+            <a
+              class="icon"
+              title="GitHub"
+              target="_blank"
+              href="https://github.com/mansavy"
               ><i class="fa-brands fa-github-square fa-2x"></i
             ></a>
           </div>
