Made index more responsive

--- a/work.html
+++ b/work.html
@@ -227,20 +227,23 @@
             />
           </div>
           <div class="col mt-5">
-            <h4 class="card-title">New Wave Weather App</h4>
+            <h4 class="card-title">
+              <a
+                href="https://sharp-minsky-ace9cf.netlify.app"
+                target="_blank"
+                title="New Wave Weather App"
+                class="work-web-link"
+                >New Wave Weather App</a
+              >
+            </h4>
 
-            <h5 class="work-subhead">Built with HTML, CSS and Javascript.</h5>
+            <h5 class="work-subhead">Built with HTML, CSS and JavaScript.</h5>
             <br />
             <p class="work-web-paragraph">
               Don't be an airhead! Head back to a time of New Coke and catch up
               on the weather with all your favourite 80's new wave artists.
             </p>
-            <a
-              href="https://sharp-minsky-ace9cf.netlify.app"
-              target="_blank"
-              class="work-web-link"
-              >New Wave Weather App</a
-            >
+
             <p>
               <button
                 class="btn btn-primary web-more-button"
@@ -259,21 +262,23 @@
             <div class="row">
               <div class="col d-none d-lg-block mb-4">
                 <br />
-                <h4 class="card-title">Atlantic Canada Landing Page</h4>
+                <h4 class="card-title">
+                  <a
+                    href="https://heroic-fudge-9f13ea.netlify.app"
+                    target="_blank"
+                    title="Atlantic Canada Landing Page"
+                    class="work-web-link"
+                    >Atlantic Canada Landing Page</a
+                  >
+                </h4>
                 <h5 class="work-subhead">
-                  Built with HTML, CSS and Javascript.
+                  Built with HTML, CSS and JavaScript.
                 </h5>
                 <br />
                 <p class="work-web-paragraph">
-                  Discover why the four Atlantic provinces in Canada are your
-                  next dream destination.
+                  Discover which of the four Atlantic provinces in Canada is
+                  your next dream destination.
                 </p>
-                <a
-                  href="https://heroic-fudge-9f13ea.netlify.app"
-                  target="_blank"
-                  class="work-web-link"
-                  >Atlantic Canada Landing Page</a
-                >
 
                 <p>
                   <button
