--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               href="/"
               >Home</a
             >
-            <a class="nav-link" title="About page" href="/#about">About</a>
+            <a class="nav-link" title="About" href="/#about">About</a>
             <a class="nav-link" title="Writing" href="/#journo">Writing</a>
             <a class="nav-link active" title="Homepage" id="brand" href="/"
               >MS</a
@@ -123,8 +123,10 @@
     </div>
 
     <div class="writing-work">
-      <h2 class="heading" title="Writing" id="journo">
-        <a href="/work.html#journalism-work" class="heading">Writing</a>
+      <h2 class="heading" id="journo">
+        <a href="/work.html#journalism-work" title="Writing" class="heading"
+          >Writing</a
+        >
       </h2>
 
       <div class="container card">
@@ -164,7 +166,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 mb-5">
+          <div class="col-lg-4 d-none d-md-block mb-5">
             <div class="card" style="width: 18rem">
               <img
                 src="/photos/boston.jpg"
@@ -185,8 +187,11 @@
     </div>
 
     <div class="web-work">
-      <h2 class="heading" title="Front-end development" id="develop">
-        <a href="/work.html#web-work-page" class="heading"
+      <h2 class="heading" id="develop">
+        <a
+          href="/work.html#web-work-page"
+          title="Front-end development"
+          class="heading"
           >Front-end development</a
         >
       </h2>
@@ -219,7 +224,10 @@
           ></button>
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="10000000000">
+          <div
+            class="carousel-item active img-fluid"
+            data-bs-interval="10000000000"
+          >
             <a href="https://sharp-minsky-ace9cf.netlify.app" target="_blank">
               <img
                 src="/photos/weather.png"
@@ -227,7 +235,7 @@
                 alt="New Wave Weather App"
             /></a>
           </div>
-          <div class="carousel-item" data-bs-interval="100000000">
+          <div class="carousel-item img-fluid" data-bs-interval="100000000">
             <a href="https://heroic-fudge-9f13ea.netlify.app" target="_blank">
               <img
                 src="/photos/whale.png"
@@ -235,7 +243,7 @@
                 alt="Atlantic Canada Landing Page"
             /></a>
           </div>
-          <div class="carousel-item" data-bs-interval="10000000">
+          <div class="carousel-item img-fluid" data-bs-interval="10000000">
             <img
               src="/photos/soon.png"
               class="d-block w-100"
