Made web site more responsive

--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
             >
             <a class="nav-link" title="About" href="/#about">About</a>
             <a class="nav-link" title="Writing" href="/#journo">Writing</a>
-            <a class="nav-link active" title="Homepage" id="brand" href="/"
+            <a
+              class="nav-link brandx active"
+              title="Homepage"
+              id="brand"
+              href="/"
               >MS</a
             >
             <a class="nav-link" title="Web projects" href="/#develop">Web</a>
