--- a/work.html
+++ b/work.html
@@ -54,7 +54,9 @@
             >
             <a class="nav-link" title="About" href="/#about">About</a>
             <a class="nav-link" title="Writing" href="/#journo">Writing</a>
-            <a class="nav-link" title="Homepage" id="brand" href="/">MS</a>
+            <a class="nav-link brandx" title="Homepage" id="brand" href="/"
+              >MS</a
+            >
             <a class="nav-link" title="Web work" href="/#develop">Web</a>
             <a class="nav-link active" title="Work page" href="/work.html"
               >Work</a
@@ -219,14 +221,14 @@
 
       <div class="container">
         <div class="row">
-          <div class="col d-none d-lg-block mb-5 mt-4">
+          <div class="col-md-6">
             <img
               src="/photos/weather.png"
               alt="New Wave Weather App"
-              class="img-fluid"
+              class="img-fluid work-pic"
             />
           </div>
-          <div class="col mt-5">
+          <div class="col-md-6">
             <h4 class="card-title">
               <a
                 href="https://sharp-minsky-ace9cf.netlify.app"
@@ -260,7 +262,7 @@
           </div>
           <div class="collapse" id="collapseWeb">
             <div class="row">
-              <div class="col d-none d-lg-block mb-4">
+              <div class="col-md-6">
                 <br />
                 <h4 class="card-title">
                   <a
@@ -294,11 +296,11 @@
                   </button>
                 </p>
               </div>
-              <div class="col d-none d-lg-block mb-4">
+              <div class="col-md-6">
                 <img
                   src="/photos/whale.png"
                   alt="Atlantic Canada landing page"
-                  class="img-fluid"
+                  class="img-fluid work-pic"
                 />
               </div>
             </div>
