Added Belfast and video page

--- a/index.html
+++ b/index.html
@@ -143,7 +143,11 @@
                 alt="Titantic Museum in Belfast"
               />
               <div class="card-body">
-                <h5 class="card-title">Three Days in Belfast</h5>
+                <h5 class="card-title">
+                  <a href="/belfast.html" title="Belfast" class="card-title"
+                    >Three Days in Belfast</a
+                  >
+                </h5>
                 <p class="card-text">
                   Situated in the Emerald Isle’s northeast—just a two-hour drive
                   from Dublin—Belfast is transforming itself into a must-visit
@@ -160,7 +164,14 @@
                 alt="A LEGO woman in pieces"
               />
               <div class="card-body">
-                <h5 class="card-title">Music Video Injuries</h5>
+                <h5 class="card-title">
+                  <a
+                    href="/video.html"
+                    class="card-title"
+                    title="Music video injuries"
+                    >Music Video Injuries</a
+                  >
+                </h5>
                 <p class="card-text">
                   Making music videos in the 80's wasn’t all glamour. Behind the
                   scenes, the long days were filled with vomit, blood, and
