--- a/video.html
+++ b/video.html
@@ -73,114 +73,231 @@
         class="img-fluid story-photo"
         title="LEGO photo by Jackson Simmer"
       />
-    </div>
-    <h1 class="story-headline">Seven Music Video Injuries and Ailments</h1>
 
+      <h1 class="story-headline">Seven Music Video Injuries and Ailments</h1>
+    </div>
     <div class="story">
       <p>
-       Before MTV debuted in 1981, music videos consisted of performance clips by British bands who couldn’t afford to tour America. But when the station took off, everything about videos got bigger: the concepts, the budgets, the stunts—and definitely the hair.
-
-But making videos wasn’t all glamour. Behind the scenes, the long days were filled with vomit, blood, and diarrhea. Here’s a brief look at the injuries and ailments behind some of the decade’s most iconic videos.
+        Before MTV debuted in 1981, music videos consisted of performance clips
+        by British bands who couldn’t afford to tour America. But when the
+        station took off, everything about videos got bigger: the concepts, the
+        budgets, the stunts—and definitely the hair. But making videos wasn’t
+        all glamour. Behind the scenes, the long days were filled with vomit,
+        blood, and diarrhea. Here’s a brief look at the injuries and ailments
+        behind some of the decade’s most iconic videos.
       </p>
+
+      <h3 class="text-center">Adam & the Ants - "Stand and Deliver"</h3>
+      <br />
+
+      <iframe
+        width="560"
+        class="video"
+        height="315"
+        src="https://www.youtube.com/embed/4B2a6l6wM2k"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+
+      <br />
       <p>
-        <h3>Adam & the Ants - "Stand and Deliver"</h3><br />
-       <iframe width="560" height="315" src="https://www.youtube.com/embed/4B2a6l6wM2k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-       Adam Ant performed his own stunts in “Stand and Deliver.” He had already jumped out of a tree but when it came time for the dandy highwayman to jump through a breakaway glass window, he balked. The crew insisted it wouldn’t hurt—but, in fact, it hurt a great deal when he split his head open and bled everywhere.
-
-Adam was able to finish what is probably his best-known video, but he learned his lesson. Months later, he hired a stuntman for “Ant Rap,” who also injured himself onset. 
+        Adam Ant performed his own stunts in “Stand and Deliver.” He had already
+        jumped out of a tree but when it came time for the dandy highwayman to
+        jump through a breakaway glass window, he balked. The crew insisted it
+        wouldn’t hurt—but, in fact, it hurt a great deal when he split his head
+        open and bled everywhere. Adam was able to finish what is probably his
+        best-known video, but he learned his lesson. Months later, he hired a
+        stuntman for “Ant Rap,” who also injured himself onset.
       </p>
 
+      <h3 class="text-center">Prince - "1999"</h3>
+      <br />
+      <iframe
+        width="560"
+        height="315"
+        class="video"
+        src="https://www.youtube.com/embed/rblt2EtFfC4"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+      <br />
       <p>
+        Prince’s 1982 single “1999” is a bit of a bummer (it’s about the nuclear
+        arms race). But for the video Prince wanted something more fun—namely
+        purple lights and tons of smoke. The shoot only took four hours, but
+        that was enough time for it to have a negative effect on the crew: The
+        mineral oil used in the smoke machine made everyone have diarrhea.
+      </p>
 
-   
-        <h3>Prince - "1999"</h3> <br />
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/rblt2EtFfC4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        Prince’s 1982 single “1999” is a bit of a bummer (it’s about the nuclear arms race). But for the video Prince wanted something more fun—namely purple lights and tons of smoke. The shoot only took four hours, but that was enough time for it to have a negative effect on the crew: The mineral oil used in the smoke machine made everyone have diarrhea.
-       
+      <h3 class="text-center">The Police - "Wrapped Around Your Finder"</h3>
+      <br />
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/svWINSRhQU0"
+        title="YouTube video player"
+        frameborder="0"
+        class="video"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+      <br />
       <p>
-        <h3>The Police - "Wrapped Around Your Finder"</h3><br />
-        With next to no money or concept, The Police shot “Wrapped Around your Finger” on a set consisting of 1000 candles. For the last shot, directors Godley & Creme asked everyone to leave the set except Sting and two crewmembers. Their only direction was to film whatever Sting did.
-
-Mephistopheles may not have been his name, but when Sting knocked over the candles, the hot wax burned him and the two other men. Thankfully, the burns weren’t severe.
+        With next to no money or concept, The Police shot “Wrapped Around your
+        Finger” on a set consisting of 1000 candles. For the last shot,
+        directors Godley & Creme asked everyone to leave the set except Sting
+        and two crewmembers. Their only direction was to film whatever Sting
+        did. Mephistopheles may not have been his name, but when Sting knocked
+        over the candles, the hot wax burned him and the two other men.
+        Thankfully, the burns weren’t severe.
       </p>
 
-       <p>
-        <h3>Van Halen - "Panama"</h3><br />
-        The “Panama” video consisted of Van Halen flying across the stage through the air and generally just acting nuts. And that’s exactly what got bassist Michael Anthony injured. Anthony was the first to shoot his flying scene, but the harness didn’t quite fit. He likened the experience to being castrated and having his nuts in a vise.
-
-Anthony recovered from the incident and went on to father two children after the making of this video. And “Panama” went on to become one of the most famous cock rock songs of all time.
+      <h3 class="text-center">Van Halen - "Panama"</h3>
+      <br />
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/fuKDBPw8wQA"
+        class="video"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe
+      ><br />
+      <p>
+        The “Panama” video consisted of Van Halen flying across the stage
+        through the air and generally just acting nuts. And that’s exactly what
+        got bassist Michael Anthony injured. Anthony was the first to shoot his
+        flying scene, but the harness didn’t quite fit. He likened the
+        experience to being castrated and having his nuts in a vise. Anthony
+        recovered from the incident and went on to father two children after the
+        making of this video. And “Panama” went on to become one of the most
+        famous cock rock songs of all time.
       </p>
 
-        <p>
-        <h3>Billy Idol - "Eyes Without a Face"</h3><br />
-     For 30 straight hours, Billy Idol didn’t see anything but fire, smoke, and half-naked women while making “Eyes Without a Face.” And those were almost the last things he ever saw. The day after the shoot, Idol was hospitalized when his contact lenses fused to his eyes thanks to the dry ice on set and lack of sleep.
-
-Months later, on the “Flesh for Fantasy” shoot, the cinematographer and director both went blind from exhaustion. Luckily, everyone’s sight returned and the two videos helped Rebel Yell last 70 weeks on the Billboard charts.
+      <h3 class="text-center">Billy Idol - "Eyes Without a Face"</h3>
+      <br />
+      <iframe
+        width="560"
+        height="315"
+        class="video"
+        src="https://www.youtube.com/embed/9OFpfTd0EIs"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe
+      ><br />
+      <p>
+        For 30 straight hours, Billy Idol didn’t see anything but fire, smoke,
+        and half-naked women while making “Eyes Without a Face.” And those were
+        almost the last things he ever saw. The day after the shoot, Idol was
+        hospitalized when his contact lenses fused to his eyes thanks to the dry
+        ice on set and lack of sleep. Months later, on the “Flesh for Fantasy”
+        shoot, the cinematographer and director both went blind from exhaustion.
+        Luckily, everyone’s sight returned and the two videos helped Rebel Yell
+        last 70 weeks on the Billboard charts.
       </p>
 
-        <p>
-        <h3>Culture Club - "The War Song"</h3><br />
-     Around 400 kids appeared in this anti-war video, and Culture Club made an effort to take great care of them. Everything was going great until after lunch; the kids ate burgers, fries, and milkshakes, and when crewmembers suspended some of the kids in the air for a parachute scene, they were promptly puked on.
+      <h3 class="text-center">Culture Club - "The War Song"</h3>
+      <br />
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/GBd5W9IA7n0"
+        class="video"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe
+      ><br />
+      <p>
+        Around 400 kids appeared in this anti-war video, and Culture Club made
+        an effort to take great care of them. Everything was going great until
+        after lunch; the kids ate burgers, fries, and milkshakes, and when
+        crewmembers suspended some of the kids in the air for a parachute scene,
+        they were promptly puked on.
       </p>
 
-
-     <p>
-        <h3>Duran Duran  - "The Wild Boys"</h3><br />
-     Duran Duran wrote “The Wild Boys” for a movie of the same name. When it fell through, director Russell Mulcahy channeled his ideas into this epic $1 million post-apocalyptic video. The second verse consisted of singer Simon Le Bon strapped to a windmill that dipped his head below water. When the windmill broke with Le Bon’s head underwater, the crew had to rescue him from drowning.
-
-Le Bon downplayed the incident, saying he didn’t fear for his life. Maybe that’s because he also survived a near shark attack while shooting “Rio.”
+      <h3 class="text-center">Duran Duran - "The Wild Boys"</h3>
+      <br />
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/M43wsiNBwmo"
+        title="YouTube video player"
+        frameborder="0"
+        class="video"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe
+      ><br />
+      <p>
+        Duran Duran wrote “The Wild Boys” for a movie of the same name. When it
+        fell through, director Russell Mulcahy channeled his ideas into this
+        epic $1 million post-apocalyptic video. The second verse consisted of
+        singer Simon Le Bon strapped to a windmill that dipped his head below
+        water. When the windmill broke with Le Bon’s head underwater, the crew
+        had to rescue him from drowning. Le Bon downplayed the incident, saying
+        he didn’t fear for his life. Maybe that’s because he also survived a
+        near shark attack while shooting “Rio.”
       </p>
-      </div>
+    </div>
 
-      <div class="contact" id="contact">
-        <h2>Contact Me</h2>
-        <p>
-          Get in touch:
-          <br />
-          <a class="email" href="mailto:mandysavoie@gmail.com"
-            >mandysavoie@gmail.com</a
-          >
-        </p>
+    <div class="contact" id="contact">
+      <h2>Contact Me</h2>
+      <p>
+        Get in touch:
+        <br />
+        <a class="email" href="mailto:mandysavoie@gmail.com"
+          >mandysavoie@gmail.com</a
+        >
+      </p>
 
-        <div class="container mt-5">
-          <div class="row">
-            <div class="col-3 contact-icon">
-              <a
-                class="icon"
-                target="_blank"
-                title="Instagram"
-                href="https://www.instagram.com/mansavytravels/"
-              >
-                <i class="fa-brands fa-instagram-square fa-2x"></i>
-              </a>
-            </div>
-            <div class="col-3 contact-icon">
-              <a
-                class="icon"
-                target="_blank"
-                title="Twitter"
-                href="https://twitter.com/mandysavoie"
-                ><i class="fa-brands fa-twitter-square fa-2x"></i
-              ></a>
-            </div>
-            <div class="col-3 contact-icon">
-              <a
-                class="icon"
-                target="_blank"
-                title="LinkedIn"
-                href="https://www.linkedin.com/in/mansavy/"
-                ><i class="fa-brands fa-linkedin fa-2x"></i
-              ></a>
-            </div>
-            <div class="col-3 contact-icon">
-              <a
-                class="icon"
-                title="GitHub"
-                target="_blank"
-                href="https://github.com/mansavy"
-                ><i class="fa-brands fa-github-square fa-2x"></i
-              ></a>
-            </div>
+      <div class="container mt-5">
+        <div class="row">
+          <div class="col-3 contact-icon">
+            <a
+              class="icon"
+              target="_blank"
+              title="Instagram"
+              href="https://www.instagram.com/mansavytravels/"
+            >
+              <i class="fa-brands fa-instagram-square fa-2x"></i>
+            </a>
+          </div>
+          <div class="col-3 contact-icon">
+            <a
+              class="icon"
+              target="_blank"
+              title="Twitter"
+              href="https://twitter.com/mandysavoie"
+              ><i class="fa-brands fa-twitter-square fa-2x"></i
+            ></a>
+          </div>
+          <div class="col-3 contact-icon">
+            <a
+              class="icon"
+              target="_blank"
+              title="LinkedIn"
+              href="https://www.linkedin.com/in/mansavy/"
+              ><i class="fa-brands fa-linkedin fa-2x"></i
+            ></a>
+          </div>
+          <div class="col-3 contact-icon">
+            <a
+              class="icon"
+              title="GitHub"
+              target="_blank"
+              href="https://github.com/mansavy"
+              ><i class="fa-brands fa-github-square fa-2x"></i
+            ></a>
           </div>
         </div>
       </div>
