Added Boston page

--- a/belfast.html
+++ b/belfast.html
@@ -70,8 +70,8 @@
       <img
         alt="The Titanic Museum in Belfast"
         src="/photos/belfast.jpg"
-        class="img-fluid story-photo"
-        title="Titanic Belfast photo by Photo by Christian Holzinger"
+        class="img-fluid story-pic"
+        title="Titanic Belfast photo by Christian Holzinger"
       />
     </div>
     <h1 class="story-headline">Three Days in Belfast</h1>
@@ -86,8 +86,10 @@
         Northern Ireland may be small, but it’s crammed with fun—or, as the
         locals say, craic.
       </p>
+
+      <h3>Day 1</h3>
+      <br />
       <p>
-        <h3>Day 1</h3><br />
         Morning: Start your day by exploring the Titanic Quarter, a former
         dockyard famous as the birthplace of the ill-fated ocean liner. The area
         is undergoing a revitalization with the addition of shops, restaurants
@@ -105,34 +107,47 @@
         chard and horseradish.
       </p>
 
-      <p><div class="container">
+      <div class="container">
         <div class="row">
-            <div class="col-md-6">
+          <div class="col-md-6">
+            <h3>Day 2</h3>
+            <br />
+            <p>
+              Morning: Take McComb’s Coach Travel’s full-day Game of Thrones bus
+              tour. Not just for fans of the HBO series, the tour follows the
+              Causeway Coastal Route—one of the prettiest drives in the world—to
+              filming sites like the Cushendun Caves and Ballintoy Harbour, a
+              tiny fishing village with picturesque limestone bricks jutting
+              into the North Atlantic Ocean. Afternoon: The tour stops for pub
+              grub—like bangers and mash—at Fullerton Arms in Ballintoy and then
+              continues to the ocean-spanning Carrick-a-Rede rope bridge and
+              Giant’s Causeway, a UNESCO World Heritage Site where the shore is
+              covered in ancient hexagonal basalt columns (created by the rapid
+              cooling of lava millions of years ago). The next stop is the
+              Instagram-worthy Dark Hedges, a road lined with beech trees
+              curving into a scenic tunnel. Evening: The tour ends back in
+              Belfast, near the ornate 1820s Crown Liquor Saloon. Grab a seat in
+              one of its carved-mahogany booths and wash down the Irish lamb
+              stew with Bushmills Whiskey (distilled nearby). Finish the night
+              by catching a musical performance at the nearby 150-year-old
+              Ulster Hall.
+            </p>
+          </div>
+          <div class="col-md-6 story-pic">
+            <img
+              src="/photos/belfastart.jpg"
+              class="img-fluid"
+              alt="Belfast street art"
+              title="Belfast street art photo by 
+K. Mitch Hodge"
+            />
+          </div>
+        </div>
+      </div>
 
-   
-        <h3>Day 2</h3> <br />
-        Morning: Take McComb’s Coach Travel’s full-day Game of Thrones bus tour.
-        Not just for fans of the HBO series, the tour follows the Causeway
-        Coastal Route—one of the prettiest drives in the world—to filming sites
-        like the Cushendun Caves and Ballintoy Harbour, a tiny fishing village
-        with picturesque limestone bricks jutting into the North Atlantic Ocean.
-        Afternoon: The tour stops for pub grub—like bangers and mash—at
-        Fullerton Arms in Ballintoy and then continues to the ocean-spanning
-        Carrick-a-Rede rope bridge and Giant’s Causeway, a UNESCO World Heritage
-        Site where the shore is covered in ancient hexagonal basalt columns
-        (created by the rapid cooling of lava millions of years ago). The next
-        stop is the Instagram-worthy Dark Hedges, a road lined with beech trees
-        curving into a scenic tunnel. Evening: The tour ends back in Belfast,
-        near the ornate 1820s Crown Liquor Saloon. Grab a seat in one of its
-        carved-mahogany booths and wash down the Irish lamb stew with Bushmills
-        Whiskey (distilled nearby). Finish the night by catching a musical
-        performance at the nearby 150-year-old Ulster Hall.</div>
-        <div class="col-md-6 story-pic"><img src="/photos/belfastart.jpg" class="img-fluid"
-             alt="Belfast street art" title="Belfast street art photo by 
-K. Mitch Hodge" /></div>
-      </p></div></div>
+      <h3>Day 3</h3>
+      <br />
       <p>
-        <h3>Day 3</h3><br />
         Morning: Let guide Billy Scott whisk you around in his black cab to some
         of Belfast’s historic sites, including the Crumlin Road Gaol (a storied
         prison), the Stormont Parliament Buildings and Belfast Castle. You’ll
@@ -150,57 +165,56 @@ K. Mitch Hodge" /></div>
         the Dirty Onion Pub for free bodhrán (Irish drum) lessons and a
         well-deserved Guinness.
       </p>
-      </div>
+    </div>
 
-      <div class="contact" id="contact">
-        <h2>Contact Me</h2>
-        <p>
-          Get in touch:
-          <br />
-          <a class="email" href="mailto:mandysavoie@gmail.com"
-            >mandysavoie@gmail.com</a
-          >
-        </p>
+    <div class="contact" id="contact">
+      <h2>Contact Me</h2>
+      <p>
+        Get in touch:
+        <br />
+        <a class="email" href="mailto:mandysavoie@gmail.com"
+          >mandysavoie@gmail.com</a
+        >
+      </p>
 
-        <div class="container mt-5">
-          <div class="row">
-            <div class="col-3 contact-icon">
-              <a
-                class="icon"
-                target="_blank"
-                title="Instagram"
-                href="https://www.instagram.com/mansavytravels/"
-              >
-                <i class="fa-brands fa-instagram-square fa-2x"></i>
-              </a>
-            </div>
-            <div class="col-3 contact-icon">
-              <a
-                class="icon"
-                target="_blank"
-                title="Twitter"
-                href="https://twitter.com/mandysavoie"
-                ><i class="fa-brands fa-twitter-square fa-2x"></i
-              ></a>
-            </div>
-            <div class="col-3 contact-icon">
-              <a
-                class="icon"
-                target="_blank"
-                title="LinkedIn"
-                href="https://www.linkedin.com/in/mansavy/"
-                ><i class="fa-brands fa-linkedin fa-2x"></i
-              ></a>
-            </div>
-            <div class="col-3 contact-icon">
-              <a
-                class="icon"
-                title="GitHub"
-                target="_blank"
-                href="https://github.com/mansavy"
-                ><i class="fa-brands fa-github-square fa-2x"></i
-              ></a>
-            </div>
+      <div class="container mt-5">
+        <div class="row">
+          <div class="col-3 contact-icon">
+            <a
+              class="icon"
+              target="_blank"
+              title="Instagram"
+              href="https://www.instagram.com/mansavytravels/"
+            >
+              <i class="fa-brands fa-instagram-square fa-2x"></i>
+            </a>
+          </div>
+          <div class="col-3 contact-icon">
+            <a
+              class="icon"
+              target="_blank"
+              title="Twitter"
+              href="https://twitter.com/mandysavoie"
+              ><i class="fa-brands fa-twitter-square fa-2x"></i
+            ></a>
+          </div>
+          <div class="col-3 contact-icon">
+            <a
+              class="icon"
+              target="_blank"
+              title="LinkedIn"
+              href="https://www.linkedin.com/in/mansavy/"
+              ><i class="fa-brands fa-linkedin fa-2x"></i
+            ></a>
+          </div>
+          <div class="col-3 contact-icon">
+            <a
+              class="icon"
+              title="GitHub"
+              target="_blank"
+              href="https://github.com/mansavy"
+              ><i class="fa-brands fa-github-square fa-2x"></i
+            ></a>
           </div>
         </div>
       </div>
