--- a/index.html
+++ b/index.html
@@ -189,7 +189,14 @@
                 alt="Boston skyline"
               />
               <div class="card-body">
-                <h5 class="card-title">Hidden Boston</h5>
+                <h5 class="card-title">
+                  <a
+                    href="/boston.html"
+                    class="card-title"
+                    title="Hidden Boston"
+                    >Hidden Boston</a
+                  >
+                </h5>
                 <p class="card-text">
                   One of the oldest cities in the United States, Boston features
                   attractive architecture and many offbeat attractions.
