Added Paris, Randy and Disney pages

--- a/belfast.html
+++ b/belfast.html
@@ -70,7 +70,7 @@
       <img
         alt="The Titanic Museum in Belfast"
         src="/photos/belfast.jpg"
-        class="img-fluid story-pic"
+        class="img-fluid story-photo"
         title="Titanic Belfast photo by Christian Holzinger"
       />
     </div>
