--- a/work.html
+++ b/work.html
@@ -128,7 +128,14 @@
                 alt="Boston skyline"
               />
               <div class="card-body">
-                <h5 class="card-title">Hidden Boston</h5>
+                <h5 class="card-title">
+                  <a
+                    href="/boston.html"
+                    class="card-title"
+                    title="Hidden Boston"
+                    >Hidden Boston</a
+                  >
+                </h5>
                 <p class="card-text">
                   One of the oldest cities in the United States, Boston features
                   attractive architecture and many offbeat attractions.
@@ -162,7 +169,14 @@
                     alt="Paris at night"
                   />
                   <div class="card-body">
-                    <h5 class="card-title">Paris on a Budget</h5>
+                    <h5 class="card-title">
+                      <a
+                        href="/paris.html"
+                        class="card-title"
+                        title="Paris on a Budget"
+                        >Paris on a Budget</a
+                      >
+                    </h5>
                     <p class="card-text">
                       A trip to Paris doesn’t have to break the bank. Here’s how
                       to stay, play, eat and shop on a budget in the City of
@@ -180,7 +194,12 @@
                   />
                   <div class="card-body">
                     <h5 class="card-title">
-                      Randy Bachman Takes Care of Business
+                      <a
+                        href="/randy.html"
+                        class="card-title"
+                        title="Randy Bachman Takes Care of Business"
+                        >Randy Bachman Takes Care of Business</a
+                      >
                     </h5>
                     <p class="card-text">
                       Who’d have thought pierogies could lead to the creation of
@@ -198,7 +217,14 @@
                     alt="Cinderella's Castle at Magic Kingdom"
                   />
                   <div class="card-body">
-                    <h5 class="card-title">Keys to the Kingdom</h5>
+                    <h5 class="card-title">
+                      <a
+                        href="/disney.html"
+                        class="card-title"
+                        title="Keys to the Kingdom"
+                        >Keys to the Kingdom</a
+                      >
+                    </h5>
                     <p class="card-text">
                       This five-hour behind-the-scenes tour of WDW's Magic
                       Kingdom is one of the few things at the amusement park not
