Made Boston page more responsive

--- a/disney.html
+++ b/disney.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Keys to the Kingdom</title>
+    <title>Keys to the Kingdom | Mandy Savoie</title>
     <meta
       name="description"
       content="This five-hour behind-the-scenes tour of WDW's Magic Kingdom is one of the few things at the amusement park not for kids."
