--- a/randy.html
+++ b/randy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Randy Bachman Takes Care of Business</title>
+    <title>Randy Bachman Takes Care of Business | Mandy Savoie</title>
     <meta
       name="description"
       content="Who’d have thought pierogies could lead to the creation of one of Canada’s greatest anthems?"
