--- a/video.html
+++ b/video.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Seven Music Video Injuries and Ailments</title>
+    <title>Seven Music Video Injuries and Ailments | Mandy Savoie</title>
     <meta
       name="description"
       content="     Making music videos in the 80's wasn’t all glamour. Behind the
