--- a/belfast.html
+++ b/belfast.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Three Days in Belfast</title>
+    <title>Three Days in Belfast | Mandy Savoie</title>
     <meta
       name="description"
       content="  Situated in the Emerald Isle’s northeast—just a two-hour drive
