--- a/boston.html
+++ b/boston.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hidden Boston</title>
+    <title>Hidden Boston | Mandy Savoie</title>
     <meta
       name="description"
-      content=" One of the oldest cities in the United States, Boston features attractive architecture and many offbeat attractions. We visit three of the city’s most interesting and engaging neighbourhoods and then cross the river to explore Greater Boston’s city of Cambridge."
+      content=" One of the oldest cities in the United States, Boston features attractive architecture and many offbeat attractions."
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -82,7 +82,7 @@
         the river to explore Greater Boston’s city of Cambridge.
       </p>
 
-      <h3>North End</h3>
+      <h2 class="article-subhead">North End</h2>
       <br />
       <p>
         Boston’s oldest residential area is just one square kilometre in size,
@@ -123,9 +123,9 @@
       </p>
 
       <div class="container">
-        <div class="row">
+        <div class="row align-items-center">
           <div class="col-md-6">
-            <h3>Downtown</h3>
+            <h2 class="article-subhead">Downtown</h2>
             <br />
             <p>
               Encompassing 34 blocks, downtown Boston features the city’s top
@@ -159,7 +159,7 @@
           </div>
         </div>
       </div>
-
+      <br />
       <p>
         Head to the Granary Burying Ground where you’ll find 17th-century
         tombstones and, just outside, one of the country’s oldest independent
@@ -178,7 +178,7 @@
         well as onion and parsley salad.
       </p>
 
-      <h3>Fenway-Kenmore</h3>
+      <h2 class="article-subhead">Fenway-Kenmore</h2>
       <br />
       <p>
         This sprawling area is home to the oldest Major League Baseball park.
@@ -218,19 +218,18 @@
       </p>
 
       <div class="container">
-        <div class="row">
-          <div class="col-md-6 mt-3">
-            <h3>Cambridge</h3>
+        <div class="row align-items-center">
+          <div class="col-md-6 mb-5">
+            <h2 class="article-subhead">Cambridge</h2>
             <img
               src="/photos/mit.jpg"
               alt="MIT's State Center"
               title="Stata Center photo by Zayn Shah"
-              class="img-fluid"
+              class="img-fluid story-pic"
             />
           </div>
-          <div class="col-md-6 mt-5">
+          <div class="col-md-6">
             <p>
-              <br />
               Across the Charles River from Boston, the 18-square-kilometre city
               of Cambridge is a hub of innovation fed not only by Harvard
               University but also by the Massachusetts Institute of Technology
@@ -247,7 +246,7 @@
           </div>
         </div>
       </div>
-      <br />
+
       <p>
         On Broadway, take the elevator at Cambridge Center to its secret rooftop
         garden to view Boston’s skyline and then stop at Broad Institute’s
