--- a/paris.html
+++ b/paris.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Paris on a budget</title>
+    <title>Paris on a budget | Mandy Savoie</title>
     <meta
       name="description"
-      content="Paris is known for its opulence in old architecture, fine food, classic art and high fashion. But a trip to the French capital doesn’t have to break the bank. Here’s how to do it all on a budget in the City of Lights."
+      content="A trip to the French capital doesn’t have to break the bank. Here’s how to do it all on a budget in the City of Lights."
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
