--- a/work.html
+++ b/work.html
@@ -53,11 +53,13 @@
               >Home</a
             >
             <a class="nav-link" title="About" href="/#about">About</a>
-            <a class="nav-link" title="Writing" href="/#journo">Writing</a>
+            <a class="nav-link" title="Writing" href="#journalism-work"
+              >Writing</a
+            >
             <a class="nav-link brandx" title="Homepage" id="brand" href="/"
               >MS</a
             >
-            <a class="nav-link" title="Web work" href="/#develop">Web</a>
+            <a class="nav-link" title="Web work" href="#web-work-page">Web</a>
             <a class="nav-link active" title="Work page" href="/work.html"
               >Work</a
             >
@@ -68,7 +70,7 @@
     </nav>
     <h1>Mandy's work</h1>
     <br />
-    <div class="journalism-work">
+    <div class="journalism-work" id="journalism-work">
       <br />
       <h2 class="heading">Writing</h2>
 
@@ -82,11 +84,11 @@
                 alt="Titantic Museum in Belfast"
               />
               <div class="card-body">
-                <h5 class="card-title">
+                <h3 class="card-title">
                   <a href="/belfast.html" title="Belfast" class="card-title"
                     >Three Days in Belfast</a
                   >
-                </h5>
+                </h3>
                 <p class="card-text">
                   Situated in the Emerald Isle’s northeast—just a two-hour drive
                   from Dublin—Belfast is transforming itself into a must-visit
@@ -103,14 +105,14 @@
                 alt="A LEGO woman in pieces"
               />
               <div class="card-body">
-                <h5 class="card-title">
+                <h3 class="card-title">
                   <a
                     href="/video.html"
                     class="card-title"
                     title="Music video injuries"
                     >Music Video Injuries</a
                   >
-                </h5>
+                </h3>
                 <p class="card-text">
                   Making music videos in the 80's wasn’t all glamour. Behind the
                   scenes, the long days were filled with vomit, blood, and
@@ -128,14 +130,14 @@
                 alt="Boston skyline"
               />
               <div class="card-body">
-                <h5 class="card-title">
+                <h3 class="card-title">
                   <a
                     href="/boston.html"
                     class="card-title"
                     title="Hidden Boston"
                     >Hidden Boston</a
                   >
-                </h5>
+                </h3>
                 <p class="card-text">
                   One of the oldest cities in the United States, Boston features
                   attractive architecture and many offbeat attractions.
@@ -169,14 +171,14 @@
                     alt="Paris at night"
                   />
                   <div class="card-body">
-                    <h5 class="card-title">
+                    <h3 class="card-title">
                       <a
                         href="/paris.html"
                         class="card-title"
                         title="Paris on a Budget"
                         >Paris on a Budget</a
                       >
-                    </h5>
+                    </h3>
                     <p class="card-text">
                       A trip to Paris doesn’t have to break the bank. Here’s how
                       to stay, play, eat and shop on a budget in the City of
@@ -193,14 +195,14 @@
                     alt="Platter of pierogies"
                   />
                   <div class="card-body">
-                    <h5 class="card-title">
+                    <h3 class="card-title">
                       <a
                         href="/randy.html"
                         class="card-title"
                         title="Randy Bachman Takes Care of Business"
                         >Randy Bachman Takes Care of Business</a
                       >
-                    </h5>
+                    </h3>
                     <p class="card-text">
                       Who’d have thought pierogies could lead to the creation of
                       one of Canada’s greatest anthems?
@@ -217,14 +219,14 @@
                     alt="Cinderella's Castle at Magic Kingdom"
                   />
                   <div class="card-body">
-                    <h5 class="card-title">
+                    <h3 class="card-title">
                       <a
                         href="/disney.html"
                         class="card-title"
                         title="Keys to the Kingdom"
                         >Keys to the Kingdom</a
                       >
-                    </h5>
+                    </h3>
                     <p class="card-text">
                       This five-hour behind-the-scenes tour of WDW's Magic
                       Kingdom is one of the few things at the amusement park not
